[feature] textual syntax for initial gap length added: use {length} within gap definitions, for example [correct;correct2;{10}]

--- a/web/src/main/java/de/elatexam/editor/components/panels/tasks/cloze/ClozeSubtaskDefInputPanel.css
+++ b/web/src/main/java/de/elatexam/editor/components/panels/tasks/cloze/ClozeSubtaskDefInputPanel.css
@@ -2,7 +2,7 @@
 
 #preview {
   margin-left: 10em;
-  width: 28em;
+  width: 35em;
 }
 .overlay {
 	padding: 0.5em;
